--- a/Phase 2/Site/styles/general.css
+++ b/Phase 2/Site/styles/general.css
@@ -43,7 +43,7 @@ body {
     
     position: absolute;
     top: 50%;
-    left: 15px;
+    left: 30px;
     transform: translateY(-50%);
 }
 
